# suwalski-assistant

./: .env.example  .env.input-discord  .env.input-local  .env.llm-example  .env.llm-local  .env.llm-mubiss  .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
docs/: setup.md  usage.md
scripts/: clean-bundle.sh  env-configure.sh  fullstack-down.sh  fullstack-up.sh  run-agent.sh  start.sh
scripts/deploy/: run.bat
scripts/infrastructure/: infra-down.sh  infra-up.sh  ollama-entrypoint.sh
src/suwalski_assistant/: console_session.py  constants.py  discord_bot.py  helpers.py  llm_models.py  main.py  note_creator.py  settings.py  tools.py
src/suwalski_assistant/entry_agent/: __init__.py  entry_agent.py
src/suwalski_assistant/generic_agent/: __init__.py  generic_agent.py
src/suwalski_assistant/handwritten_notes_agent/: __init__.py  handwritten_notes_agent.py
src/suwalski_assistant/input_interface/: __init__.py  discord_bot.py
src/suwalski_assistant/ollama_agent/: __init__.py  ollama_agent.py
src/suwalski_assistant/services/: logging_config.py  note_creator.py
tests/: GEMINI.md  test_handwritten_notes_agent.py  test_main.py
